--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.0",
+    "prettier": "^2.6.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
+  },
+ "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write",
+   ".{js,jsx,ts,tsx}": "eslint --cache --fix"
   },
   "scripts": {
     "start": "react-scripts start",
