--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
  "lint-staged": {
     "*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write",
    ".{js,jsx,ts,tsx}": "eslint --cache --fix"
