--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
-    "prettier": "^2.6.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -23,9 +22,9 @@
       "pre-commit": "lint-staged"
     }
   },
- "lint-staged": {
+  "lint-staged": {
     "*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write",
-   ".{js,jsx,ts,tsx}": "eslint --cache --fix"
+    ".{js,jsx,ts,tsx}": "eslint --cache --fix"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.17.0",
+    "prettier": "^2.6.2"
   }
 }
